Arrangement du code